<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/undoButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/undoButton" />

            <Button
                android:id="@+id/allClearButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/allClearButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/squareRootButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/squareRootButton" />

            <Button
                android:id="@+id/dropButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:text="@string/dropButton" />

            <Button
                android:id="@+id/swapButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:text="@string/swapButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sevenButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/sevenButton" />

            <Button
                android:id="@+id/eightButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/eightButton" />

            <Button
                android:id="@+id/nineButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/nineButton" />

            <Button
                android:id="@+id/exponentButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/exponentButton" />

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/backButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fourButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/fourButton" />

            <Button
                android:id="@+id/fiveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/fiveButton" />

            <Button
                android:id="@+id/sixButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/sixButton" />

            <Button
                android:id="@+id/multiplyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="/@empty"
                android:text="@string/multiplyButton" />

            <Button
                android:id="@+id/divideButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/divideButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/oneButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/oneButton" />

            <Button
                android:id="@+id/twoButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/twoButton" />

            <Button
                android:id="@+id/threeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/threeButton" />

            <Button
                android:id="@+id/addButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/addButton" />

            <Button
                android:id="@+id/subtractButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/subtractButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zeroButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/zeroButton" />

            <Button
                android:id="@+id/dotButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/dotButton" />

            <Button
                android:id="@+id/negateButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/negateButton" />

            <Button
                android:id="@+id/enterButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:text="@string/enterButton" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>